tests/ui/codegen/mir/validation/parse_malformed_function.mir
//@compile-flags: --pass none

@module MalformedFunction

fn @ { //~ ERROR: expected identifier
